# bfi

./: .gitignore  CMakeLists.txt  Makefile  README.md  basm.sh  flake.nix  shell.nix
examples/: HelloWorld.bf  bfi.bf  break.bf  cat.bf  mandelbrot.bf  number.bf  rot13.bf  squares.bf
src/: bfi.c  bfi.h  cap.c  cap.h  compiler.c  compiler.h  interpreter.c  interpreter.h  log.h  main.c  rand.c  rand.h  scanner.c  scanner.h  types.h  xmem.h
